--- a/main.css
+++ b/main.css
@@ -94,7 +94,7 @@ input, select, textarea {
 	}
 
 	body {
-		background-image: url('/Users/anthonypoluch/Documents/Github/TPoluch.github-2.io-main/maxim-berg-3E2xgrlNXq4-unsplash.jpg');
+		background-image: url(maxim-berg-3E2xgrlNXq4-unsplash.jpg);
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
