--- a/main.css
+++ b/main.css
@@ -1187,7 +1187,7 @@ input, select, textarea {
 	color: #ffffff;
 background: rgb(100, 100, 128);
 	position: relative;
-	border-color: #3a3a3a;
+	border-color: #192919;
 	border-style: solid;
 	border-width: 2.5px;
 	box-shadow: 0px 0px .7rem  #a8a8a8;
@@ -1207,14 +1207,14 @@ background: rgb(100, 100, 128);
 .bubbly-button:before {
   display: none;
   top: -75%;
-  background-image: radial-gradient(circle, #363636 20%, transparent 20%), radial-gradient(circle, transparent 20%, #949494 20%, transparent 30%), radial-gradient(circle, #1e361c 20%, transparent 20%), radial-gradient(circle, #949494 20%, transparent 20%), radial-gradient(circle, transparent 10%, #1e361c 15%, transparent 20%), radial-gradient(circle, #949494 20%, transparent 20%), radial-gradient(circle, #363636 20%, transparent 20%), radial-gradient(circle, #949494 20%, transparent 20%), radial-gradient(circle, #1e361c 20%, transparent 20%);
+  background-image: radial-gradient(circle, #363636 20%, transparent 20%), radial-gradient(circle, transparent 20%, #949494 20%, transparent 30%), radial-gradient(circle, #a08a67 20%, transparent 20%), radial-gradient(circle, #949494 20%, transparent 20%), radial-gradient(circle, transparent 10%, #a08a67 15%, transparent 20%), radial-gradient(circle, #949494 20%, transparent 20%), radial-gradient(circle, #363636 20%, transparent 20%), radial-gradient(circle, #949494 20%, transparent 20%), radial-gradient(circle, #a08a67 20%, transparent 20%);
   background-size: 15% 15%, 25% 25%, 20% 20%, 25% 25%, 23% 23%, 15% 15%, 20% 20%, 15% 15%, 23% 23%;
 }
 .bubbly-button:after {
   display: none;
 	font-size: 10rem;
   bottom: -75%;
-  background-image: radial-gradient(circle, #363636 20%, transparent 20%), radial-gradient(circle, transparent 20%, #949494 20%, transparent 30%), radial-gradient(circle, #1e361c 20%, transparent 20%), radial-gradient(circle, #949494 20%, transparent 20%), radial-gradient(circle, transparent 10%, #1e361c 15%, transparent 20%), radial-gradient(circle, #949494 20%, transparent 20%), radial-gradient(circle, #363636 20%, transparent 20%), radial-gradient(circle, #949494 20%, transparent 20%), radial-gradient(circle, #1e361c 20%, transparent 20%);
+  background-image: radial-gradient(circle, #363636 20%, transparent 20%), radial-gradient(circle, transparent 20%, #949494 20%, transparent 30%), radial-gradient(circle, #a08a67 20%, transparent 20%), radial-gradient(circle, #949494 20%, transparent 20%), radial-gradient(circle, transparent 10%, #a08a67 15%, transparent 20%), radial-gradient(circle, #949494 20%, transparent 20%), radial-gradient(circle, #363636 20%, transparent 20%), radial-gradient(circle, #949494 20%, transparent 20%), radial-gradient(circle, #a08a67 20%, transparent 20%);
   background-size: 20% 20%, 25% 25%, 23% 23%, 25% 25%, 20% 20%, 15% 15%, 25% 25%;
 }
 .bubbly-button:active {
