--- a/main.css
+++ b/main.css
@@ -1962,8 +1962,8 @@ background: transparent;
   z-index: 2;
   opacity: 1;
 	padding: 12px;
-	border: 2px solid white;
-	background-color: #fe403e;
+	border: 2px solid #907057;
+	background-color: #172818;
 	color: #ffffff;
 	border-radius: 25px;
 	transition: all .1s;
