--- a/main.css
+++ b/main.css
@@ -1936,7 +1936,7 @@ background: transparent;
   opacity: 1;
   transition: all 0.5s;
 	border-radius: 25px;
-	background-color: #233657;
+	background-color: #4b4b4b;
 	margin: .4rem;
 }
 
