--- a/main.css
+++ b/main.css
@@ -1154,9 +1154,11 @@ input, select, textarea {
     text-decoration-thickness: 12rem;
     min-width: 7.5rem;
     height: 2.75rem;
-
+    letter-spacing: 0.2rem;
     text-transform: uppercase;
-
+        line-height: 2.75rem;
+        margin: 0 0px 0rem 0px;
+    padding: 0 0rem 0 0rem;
     font-size: .8rem;
     font-weight: 500;
     border-bottom: 0;
@@ -1215,12 +1217,10 @@ background: #0B2046;
 }
 .bubbly-button.animate:before {
   display: block;
-  transform: scale(1.2);
   animation: topBubbles ease-in-out .75s forwards;
 }
 .bubbly-button.animate:after {
   display: block;
-    transform: scale(1.2);
   animation: bottomBubbles ease-in-out .75s forwards;
 }
 
