--- a/main.css
+++ b/main.css
@@ -138,7 +138,7 @@ input, select, textarea {
 		}
 
 	body, input, select, textarea {
-		color: #0B172F;
+		color: #ffffff;
 		font-family: "Source Sans Pro", sans-serif;
 		line-height: 1.65;
 	}
@@ -170,7 +170,7 @@ input, select, textarea {
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #C4271C;
+		color: #fffffff;
 		font-weight: 600;
 		line-height: 1.5;
 		margin: 0 0 1rem 0;
@@ -1011,7 +1011,7 @@ input, select, textarea {
 		background-color: transparent;
 		border-radius: 4px;
 		border: 0;
-		box-shadow: inset 0 0 0 1px #ffffff;
+		border-color: #F46100;
 		color: #ffffff;
 		cursor: pointer;
 		display: inline-block;
@@ -1161,15 +1161,12 @@ input, select, textarea {
     padding: 0 0rem 0 0rem;
     font-size: .8rem;
     font-weight: 500;
-    border-bottom: 0;
+    border-color: #787878;
     border-style: solid;
-    border-width: 2px;
-    border-color: #FF3C00;
+    border-width: 2px;]
     max-width: 100%;
-    box-shadow: 0 5px 1rem #0B2046;
     border-radius: 25px;
-    background: #F6934C;
-    -webkit-background: #F6934C;
+
 }
 .bubbly-button:focus {
 
@@ -1179,11 +1176,10 @@ input, select, textarea {
 	position: relative;
 	font-weight: bold;
 	color: #ffffff;
-background: #0B2046;
-	border-color: #FF7A00;
+background: #535353;
+	border-color: #ffffff;
 	border-style: solid;
 	border-width: 2.5px;
-	box-shadow: 0px 0px .7rem  #a8a8a8;
 	border-radius: 25px;
 }
 .bubbly-button:before, .bubbly-button:after {
@@ -1196,24 +1192,25 @@ background: #0B2046;
   z-index: -1000;
   transition: all ease-in-out 1.5s;
   background-repeat: no-repeat;
+  background-filter: blur(5rem);
 }
-.bubbly-button:before {
+/*.bubbly-button:before {
   display: none;
   top: -75%;
-  background-image: radial-gradient(circle, #FF4600 20%, transparent 20%), radial-gradient(circle, transparent 20%, #5D45FF 20%, transparent 30%), radial-gradient(circle, #a08a67 20%, transparent 20%), radial-gradient(circle, #FF7A00 20%, transparent 20%), radial-gradient(circle, transparent 10%, #a08a67 15%, transparent 20%), radial-gradient(circle, #68B5FF 20%, transparent 20%), radial-gradient(circle, #FF4600 20%, transparent 20%), radial-gradient(circle, #5D45FF 20%, transparent 20%), radial-gradient(circle, #FF7A00 20%, transparent 20%);
+  background-image: radial-gradient(circle, #ffffff 20%, transparent 20%), radial-gradient(circle, transparent 20%, #565656 20%, transparent 30%), radial-gradient(circle, #121212 20%, transparent 20%), radial-gradient(circle, #ffffff 20%, transparent 20%), radial-gradient(circle, transparent 10%, #565656 15%, transparent 20%), radial-gradient(circle, #121212 20%, transparent 20%), radial-gradient(circle, #ffffff 20%, transparent 20%), radial-gradient(circle, #565656 20%, transparent 20%), radial-gradient(circle, #121212 20%, transparent 20%);
   background-size: 15% 15%, 25% 25%, 20% 20%, 25% 25%, 23% 23%, 15% 15%, 20% 20%, 15% 15%, 23% 23%;
 }
 .bubbly-button:after {
   display: none;
   bottom: -75%;
-  background-image: radial-gradient(circle, #FF4600 20%, transparent 20%), radial-gradient(circle, transparent 20%, #5D45FF 20%, transparent 30%), radial-gradient(circle, #a08a67 20%, transparent 20%), radial-gradient(circle, #FF7A00 20%, transparent 20%), radial-gradient(circle, transparent 10%, #a08a67 15%, transparent 20%), radial-gradient(circle, #68B5FF 20%, transparent 20%), radial-gradient(circle, #FF4600 20%, transparent 20%), radial-gradient(circle, #5D45FF 20%, transparent 20%), radial-gradient(circle, #FF7A00 20%, transparent 20%);
+  background-image: radial-gradient(circle, #ffffff 20%, transparent 20%), radial-gradient(circle, transparent 20%, #565656 20%, transparent 30%), radial-gradient(circle, #121212 20%, transparent 20%), radial-gradient(circle, #ffffff 20%, transparent 20%), radial-gradient(circle, transparent 10%, #565656 15%, transparent 20%), radial-gradient(circle, #121212 20%, transparent 20%), radial-gradient(circle, #ffffff 20%, transparent 20%), radial-gradient(circle, #565656 20%, transparent 20%), radial-gradient(circle, #121212 20%, transparent 20%);
   background-size: 20% 20%, 25% 25%, 23% 23%, 25% 25%, 20% 20%, 15% 15%, 25% 25%;
-}
+}*/
 .bubbly-button:active {
   transform: scale(0.9);
 	color: #ffffff;
 	font-weight: bolder;
-  box-shadow: 0 2px 25px #ffffff;
+
 }
 .bubbly-button.animate:before {
   display: block;
@@ -1322,6 +1319,7 @@ background: #0B2046;
 /* Header */
 
 	#header {
+	    margin-bottom: 0%;
 		display: -moz-flex;
 		display: -webkit-flex;
 		display: -ms-flex;
@@ -1342,8 +1340,10 @@ background: #0B2046;
 		background-image: -webkit-radial-gradient(rgba(0, 0, 0, 0.25) 25%, rgba(0, 0, 0, 0) 55%);
 		background-image: -ms-radial-gradient(rgba(0, 0, 0, 0.25) 25%, rgba(0, 0, 0, 0) 55%);
 		background-image: radial-gradient(rgba(0, 0, 0, 0.25) 25%, rgba(0, 0, 0, 0) 55%);
-		max-width: 100%;
 		text-align: center;
+		-webkit-background-filter: blur(4rem);
+		background-filter: blur(4rem);
+
 	}
 
 		#header > * {
@@ -1352,7 +1352,6 @@ background: #0B2046;
 			-ms-transition: opacity 0.325s ease-in-out;
 			transition: opacity 0.325s ease-in-out;
 			position: relative;
-			margin-top: 3.5rem;
 		}
 
 			#header > *:before {
@@ -1362,7 +1361,9 @@ background: #0B2046;
 				top: calc(-3.5rem - 1px);
 				left: calc(50% - 1px);
 				height: calc(3.5rem + 1px);
-				background: #ffffff;
+				background-filter: blur(40rem);
+				-webkit-background-filter: blur(4rem);
+		background-filter: blur(4rem);
 			}
 
 		#header > :first-child {
@@ -1377,8 +1378,7 @@ background: #0B2046;
 			width: 5.5rem;
 			height: 5.5rem;
 			line-height: 5.5rem;
-			border: solid 1px #ffffff;
-			border-radius: 100%;
+
 		}
 
 			#header .logo .icon:before {
@@ -1386,11 +1386,7 @@ background: #0B2046;
 			}
 
 		#header .content {
-			border-radius: 20px;
-    background: #163365; -webkit-background: #163365;
-    border-color: #ffffff;
-    border-width: 6px;
-    border-style: solid;
+
 
 		}
 
@@ -1403,14 +1399,15 @@ background: #0B2046;
 				-webkit-transition-delay: 0.25s;
 				-ms-transition-delay: 0.25s;
 				transition-delay: 0.25s;
-				padding: 3rem 2rem;
-				max-height: 40rem;
+				padding: 2rem 1rem;
+
 				overflow: hidden;
 
 			}
 
 				#header .content .inner > :last-child {
 					margin-bottom: 0;
+					background-filter: blur(40rem);
 				}
 
 			#header .content p {
@@ -1418,7 +1415,9 @@ background: #0B2046;
 				letter-spacing: 0.2rem;
 				font-size: 0.8rem;
 				line-height: 2;
-			}
+				background-filter: blur(40rem);
+			-webkit-background-filter: blur(4rem);
+		background-filter: blur(4rem);}
 
 		#header nav ul {
 			display: -moz-flex;
@@ -1428,10 +1427,9 @@ background: #0B2046;
 			margin-bottom: 0;
 			list-style: none;
 			padding-left: 0;
-			border-radius: 5px;
-			border-width: 10px;
-			border-color: black;
-
+			background-filter: blur(40rem);
+-webkit-background-filter: blur(4rem);
+		background-filter: blur(4rem);
 		}
 
 			#header nav ul li {
@@ -1451,17 +1449,13 @@ background: #0B2046;
 					text-transform: uppercase;
 					letter-spacing: 0.2rem;
 					font-size: 0.8rem;
-					border-bottom: 0;
-					border-style: solid;
-					margin: 0 10px 0rem 10px;
-					border-width: 1px;
-					border-color: #ffffff;
-					max-width: 100%;
-					box-shadow: 0 0 1rem #000000;
-					background-color: rgba(0,0,0,0.4);
+
+
+					-webkit-background-filter: blur(4rem);
+		background-filter: blur(4rem);
 					-webkit-backdrop-filter: blur(0.5rem);
 					backdrop-filter: blur(0.5rem);
-					border-radius: 25px;
+
 					font-weight: bold;
 
 				}
@@ -1470,23 +1464,20 @@ background: #0B2046;
 						color: #000000;
 						position: relative;
 						z-index: 1;
-						border-style: solid;
-						background-color: slategrey;
-						border-width: 2px;
-						border-radius: 5px;
-						box-shadow: 0 0 5rem #ffffff;
-						border-radius: 25px;
+						-webkit-background-filter: blur(4rem);
+		background-filter: blur(4rem);
 
 
 					}
 					#header nav ul li a:active {
 						background-color: #a8a8a8;
 						color: #242323;
-						backdrop-filter: brightness(.45); -webkit-backdrop-filter: brightness(.45);
-						background-color: rgba(0,0,0,0.4);
+						-webkit-background-filter: blur(4rem);
+		background-filter: blur(4rem);
 					}
 
-		#header nav.use-middle:after {
+		#header nav.use-middle:after {-webkit-background-filter: blur(4rem);
+		background-filter: blur(4rem);
 			content: '';
 			display: block;
 			position: absolute;
@@ -1494,6 +1485,7 @@ background: #0B2046;
 			left: calc(50% - 1px);
 			height: 100%;
 			background: #ffffff;
+			background-filter: blur(40rem);
 		}
 
 		#header nav.use-middle ul li.is-middle {
@@ -1657,18 +1649,20 @@ background: #0B2046;
 			max-width: 100%;
 			border-radius: 4px;
 			opacity: 0;
+			background-filter: blur(5px);
 		}
 
 			#main article.active {
-				 transform: translateY(0px);
-				 background-filter: brightness(0.5);
+				     transform: translateY(0px);
+    background-filter: brightness(0.5);
     opacity: 1;
     border-radius: 25px;
-    border: 6px solid white;
+    border: 1px solid white;
     -webkit-backdrop-filter: blur(9rem);
-			backdrop-filter: blur(9rem);
-    box-shadow: inset rgb(255 255 255) 0px 0px 20rem 20px;
-    box-shadow: rgb(15 25 46) 0px 0px 20rem 20px;
+    backdrop-filter: blur(9rem);
+    backdrop-filter: blur(5rem);
+
+
 ;
 			}
 
@@ -1701,8 +1695,7 @@ background: #0B2046;
 					background-position: center;
 					background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='20px' height='20px' viewBox='0 0 20 20' zoomAndPan='disable'%3E%3Cstyle%3Eline %7B stroke: %23ffffff%3B stroke-width: 1%3B %7D%3C/style%3E%3Cline x1='2' y1='2' x2='18' y2='18' /%3E%3Cline x1='18' y1='2' x2='2' y2='18' /%3E%3C/svg%3E");
 					background-size: 20px 20px;
-					background-repeat: no-repeat;
-					background-color: #727272;
+					background-repeat: no-repeat;;
 				}
 
 				#main article .close:hover:before {
@@ -1921,16 +1914,16 @@ background: transparent;
 }
 
 .projects-list li {
-  padding: 7px;
-  font-family: helvetica;
-  color: rgba(255, 255, 255, 0.6);
-  float: left;
-  cursor: pointer;
-  opacity: 1;
-  transition: all 0.5s;
-	border-radius: 25px;
-	background-color: #6FB0FF;
-	margin: .4rem;
+    padding: 7px;
+    font-family: helvetica;
+    color: #ffffff;
+    float: left;
+    cursor: pointer;
+    opacity: 1;
+    transition: all 0.5s;
+    border-radius: 25px;
+    background-color: #343434;
+    margin: .4rem;
 }
 
 .projects-list li:after {
@@ -1944,30 +1937,27 @@ background: transparent;
   white-space: nowrap;
   transition: all .5s;
   box-sizing: border-box;
-  background-color: rgba(0,0,0,0.1);
   border-radius: 4px;
   height: 1px;
-  border: 1px solid rgba(0,0,0,0.04);
 }
 
 .projects-list li:hover {
   position: relative;
   z-index: 2;
   opacity: 1;
-	padding: 12px;
-	border: 2px solid #FF7A00;
-	background-color: #0B2046;
 	color: #ffffff;
+background: #535353;
+	border-color: #5290FF;
 	border-radius: 25px;
+	border-style: solid;
+	border-size: 2px;
 	transition: all .1s;
-	box-shadow: 0 0 .5rem #0B2046;
-margin: 5px;
 }
 
 .projects-list li:hover:after {
-  width: 75px;
   opacity: 1;
 	transition-delay: 0.5s;
+
 }
 
 /*.projects-list .Python {*/
