--- a/main.css
+++ b/main.css
@@ -1161,11 +1161,14 @@ input, select, textarea {
     padding: 0 0rem 0 0rem;
     font-size: .8rem;
     font-weight: 500;
-    border-color: #787878;
+    border-color: #898989;
     border-style: solid;
-    border-width: 2px;]
+    border-width: 2px;
     max-width: 100%;
     border-radius: 25px;
+    backdrop-filter: blur(8rem);
+    text-shadow: 0 0 2px black;
+    background-color: #0000004d;
 
 }
 .bubbly-button:focus {
@@ -1628,10 +1631,15 @@ background: #535353;
 		-moz-flex-direction: column;
 		-webkit-flex-direction: column;
 		-ms-flex-direction: column;
-		flex-direction: column;
-		position: relative;
-		max-width: 100%;
-		z-index: 3;
+        flex-direction: column;
+    position: relative;
+    max-width: fit-content;
+    padding: 1rem;
+    -webkit-padding: 1rem;
+    z-index: 3;
+    -webkit-text-shadow: 0px 0px 2rem black;
+    text-shadow: 0px 0px 8px black;
+    cont
 	}
 
 		#main article {
@@ -1649,7 +1657,9 @@ background: #535353;
 			max-width: 100%;
 			border-radius: 4px;
 			opacity: 0;
-			background-filter: blur(5px);
+			backdrop-filter: blur(8rem);
+    text-shadow: 0 0 2px black;
+    background-color: #0000006e;
 		}
 
 			#main article.active {
