--- a/main.css
+++ b/main.css
@@ -1633,7 +1633,9 @@ background: #535353;
 		-ms-flex-direction: column;
         flex-direction: column;
     position: relative;
-    max-width: fit-content;
+    max-width: 90%;
+		max-height: 90%;
+		margin:1rem;
     padding: 1rem;
     -webkit-padding: 1rem;
     z-index: 3;
