--- a/main.css
+++ b/main.css
@@ -1112,8 +1112,8 @@ input, select, textarea {
 		position: fixed;
 		top: 0;
 		left: 0;
-		width: 100%;
-		height: 100vh;
+		max-width: 100%;
+		max-height: 100%;
 		z-index: 1;
 	}
 
