--- a/main.css
+++ b/main.css
@@ -1112,8 +1112,8 @@ input, select, textarea {
 		position: fixed;
 		top: 0;
 		left: 0;
-		max-width: 100%;
-		max-height: 100%;
+		width: 100%;
+		height: 100%;
 		z-index: 1;
 	}
 
@@ -1633,10 +1633,7 @@ background: #535353;
 		-ms-flex-direction: column;
         flex-direction: column;
     position: relative;
-    max-width: 100%;
-		max-height: 100%;
-		margin:1rem;
-    padding: 1rem;
+    
     -webkit-padding: 1rem;
     z-index: 3;
     -webkit-text-shadow: 0px 0px 2rem black;
@@ -1645,6 +1642,10 @@ background: #535353;
 	}
 
 		#main article {
+			max-width: 100%;
+		max-height: 100%;
+		margin:1rem;
+    padding: 1rem;
 			-moz-transform: translateY(0.25rem);
 			-webkit-transform: translateY(0.25rem);
 			-ms-transform: translateY(0.25rem);
