--- a/main.css
+++ b/main.css
@@ -1642,7 +1642,8 @@ background: #535353;
 	}
 
 		#main article {
-			
+			width: 100%;
+		height: 100%;
 		margin:1rem;
     padding: 1rem;
 			-moz-transform: translateY(0.25rem);
