--- a/main.css
+++ b/main.css
@@ -1104,16 +1104,11 @@ input, select, textarea {
 /* BG */
 
 	#bg {
-		-moz-transform: scale(1.0);
-		-webkit-transform: scale(1.0);
-		-ms-transform: scale(1.0);
-		transform: scale(1.0);
-		-webkit-backface-visibility: hidden;
-		position: fixed;
+		
 		top: 0;
 		left: 0;
-		width: 100%;
-		height: 100%;
+		width: fit-content;
+		height: fit-content;
 		z-index: 1;
 	}
 
