--- a/main.css
+++ b/main.css
@@ -1107,8 +1107,8 @@ input, select, textarea {
 		
 		top: 0;
 		left: 0;
-		width: fit-content;
-		height: fit-content;
+		width: 100%;
+		height: 100%;
 		z-index: 1;
 	}
 
