--- a/main.css
+++ b/main.css
@@ -1105,10 +1105,16 @@ input, select, textarea {
 
 	#bg {
 		
+		-moz-transform: scale(1.0);
+		-webkit-transform: scale(1.0);
+		-ms-transform: scale(1.0);
+		transform: scale(1.0);
+		-webkit-backface-visibility: hidden;
+		position: fixed;
 		top: 0;
 		left: 0;
 		width: 100%;
-		height: 100%;
+		height: 100vh;
 		z-index: 1;
 	}
 
