--- a/main.css
+++ b/main.css
@@ -1125,6 +1125,7 @@ input, select, textarea {
 			left: 0;
 			width: 100%;
 			height: 100%;
+			backdrop-filter: blur(4px);
 		}
 
 		#bg:before {
@@ -1666,10 +1667,10 @@ background: #535353;
     background-filter: brightness(0.5);
     opacity: 1;
     border-radius: 25px;
-    border: 1px solid white;
+    border: 5px solid white;
     -webkit-backdrop-filter: blur(9rem);
     backdrop-filter: blur(9rem);
-    backdrop-filter: blur(5rem);
+    backdrop-filter: blur(9rem);
 
 
 ;
